--- a/index.html
+++ b/index.html
@@ -17,6 +17,30 @@
   -->
   <link rel="stylesheet" href="./assets/css/style.css">
 
+  <style>
+    .timeline-item-title {
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+    .timeline-item-title a {
+      color: white !important;
+      text-decoration: none;
+      display: inline;
+    }
+    .timeline-item-title a:hover {
+      text-decoration: underline;
+    }
+    .timeline-text a {
+      color: white !important;
+      text-decoration: none;
+      display: inline;
+    }
+    .timeline-text a:hover {
+      text-decoration: underline;
+    }
+  </style>
+
   <!--
     - google font link
   -->
@@ -46,7 +70,6 @@
         </figure>
 
         <div class="info-content">
-          <p class="title">Professionelt Bestyrelsesmedlem | Professor</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
@@ -163,6 +186,7 @@
 
         <header>
           <h2 class="h2 article-title">Michael Slavensky Dahl</h2>
+          <p class="title" style="margin-top: 10px; font-size: 1.2em; color: #666;">Professionelt bestyrelsesmedlem | Professor</p>
         </header>
 
         <section class="about-text">
